src/pages/Home/components/HorizontalCard/HorizontalCard.module.css
.hori_Card {
   height: 100%;
   overflow: hidden;
   box-shadow: 1px 1px 2px lightgray;
}

.hori_Card:hover {
   cursor: pointer;
   transform: scale(1.005);
   box-shadow: 2px 2px 3px lightgray;
}

.imgBlock {
   height: 100%;
   margin: 0;
   padding-right: 0;
}

.cardBody {
   align-self: center;
}

.cardImg {
   object-fit: cover;
   width: 100%;
   height: 100%;
   display: inline-block;

   border-radius: 0;
}

.cardText {
   padding-left: 0;
   margin: 0;
}

@media screen and (max-width: 860px) {
   .hori_Card {
      margin-left: auto 0;
   }
}

